<resources>
    <string name="app_name">GeoCalculator</string>
    <string name="position_1">Position 1</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="position_2">Position 2</string>
    <string name="clear">clear</string>
    <string name="calculate">calculate</string>
    <string name="distance">Distance:</string>
    <string name="bearing">Bearing:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="choose">choose</string>
    <string name="settings">Settings</string>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="bearing_unit">Bearing Unit</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="degrees">Degrees</string>
    <string name="mils">Mils</string>
    <string name="tired_of_typing">Tired of typing?</string>
</resources>
