<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dunrite.geocalculator.MainActivity">


    <TextView
        android:text="@string/position_1"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:id="@+id/labelP1"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/latitudeP1"
        android:hint="@string/latitude"
        android:selectAllOnFocus="false"
        style="@style/Widget.AppCompat.EditText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelP1"
        app:layout_constraintLeft_toLeftOf="@+id/labelP1"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/longitudeP1"
        android:hint="@string/longitude"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/latitudeP1"
        app:layout_constraintLeft_toLeftOf="@+id/latitudeP1"
        app:layout_constraintRight_toRightOf="@+id/latitudeP1" />

    <TextView
        android:text="@string/position_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/labelP2"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/longitudeP1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/longitudeP1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/longitudeP1" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/latitudeP2"
        android:hint="@string/latitude"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/labelP2"
        app:layout_constraintTop_toBottomOf="@+id/labelP2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/labelP2" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/longitudeP2"
        android:hint="@string/longitude"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/latitudeP2"
        app:layout_constraintLeft_toLeftOf="@+id/latitudeP2"
        app:layout_constraintRight_toRightOf="@+id/latitudeP2" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/longitudeP2"
        app:layout_constraintTop_toBottomOf="@+id/longitudeP2"/>

    <Button
        android:text="@string/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/longitudeP2"
        app:layout_constraintLeft_toLeftOf="@+id/longitudeP2" />

    <TextView
        android:text="@string/distance"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:id="@+id/distanceText"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/calcButton"
        app:layout_constraintLeft_toLeftOf="@+id/calcButton"
        app:layout_constraintRight_toRightOf="@+id/clearButton" />

    <TextView
        android:text="@string/bearing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/bearingText"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/distanceText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/distanceText"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/distanceText" />
</android.support.constraint.ConstraintLayout>
